<resources>
    <string name="app_name">Homework 17 Revised 2</string>
    <string name="log_in">Log in</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="remember_me">remember me</string>
    <string name="register_here">register here</string>
    <string name="register">register</string>
    <string name="repeat_password">repeat password</string>
    <string name="sample_email">sample email</string>
    <string name="log_out">log out</string>
    <string name="sample_token">sample token</string>

</resources>